# BussinessReportAnalysisAgent

./: .gitignore  app.py  pyproject.toml  run_etl.py  test.py
.zen/: config.yaml
bussinessreportanalysisagent/: settings.py
bussinessreportanalysisagent/application/preprocessing/: chunking.py  data_loader.py
bussinessreportanalysisagent/application/rag/: prompt_templates.py
bussinessreportanalysisagent/core/: controller.py
bussinessreportanalysisagent/db/: embeddings.py  vector_store.py
bussinessreportanalysisagent/models/: models.py
bussinessreportanalysisagent/services/: content_keyword_generation.py
bussinessreportanalysisagent/validations/: file_name_validation.py
notebooks/: loading_splitting_chunking.ipynb
pipelines/: data_etl.py
steps/: config.yml  etl.py  utils.py
