[project]
name = "bussinessreportanalysisagent"
version = "0.1.0"
description = ""
authors = [
    {name = "Dikshant Gupta",email = "guptadikshant99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "openai",
    "pandas",
    "pymupdf",
    "streamlit",
    "chromadb",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-groq",
    "python-dotenv",
    "jupyter",
    "ipykernel",
    "langchain_chroma",
    "qdrant-client (<1.13.2)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.100,<=0.115.8)",
    "zenml[server] (>=0.75.1)",
    "unstructured[all-docs] (>=0.17.2,<0.18.0)",
]

[tool.poetry]
name = "bussinessreportanalysisagent"
description = "A business report analysis agent that uses OpenAI and Google Gemini APIs to analyze and generate reports."
version = "0.0.1"
packages = [
    {include = "bussinessreportanalysisagent"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"